<resources>
    <string name="app_name">Trab1-DDM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tela_cadastro">Cadastro</string>
    <string name="tela_login">Login</string>
    <string name="tela_camera">Camera</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_library">Library</string>
    <string name="menu_cadastro">Cadastro</string>
    <string name="menu_login">Login</string>
    <string name="menu_Camera">Camera</string>

</resources>