<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_menu_library"
            android:title="@string/menu_library" />
        <item
            android:id="@+id/nav_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/cadastro"
            android:orderInCategory="100"
            android:title="@string/tela_cadastro" />
        <item
            android:id="@+id/login"
            android:orderInCategory="100"
            android:title="@string/tela_login" />

    </group>
</menu>