<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trab1_ddm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        android:enabled="true"
        tools:layout="@layout/fragment_home" />


        <fragment
            android:id="@+id/nav_library"
            android:name="LibraryFragment"
            android:label="@string/menu_library"
            tools:layout="@layout/fragment_library" >
            <action
                android:id="@+id/action_libraryFragment_to_gameDetailsFragment"
                app:destination="@id/gameDetailsFragment" />
        </fragment>


        <fragment
        android:id="@+id/gameDetailsFragment"
        android:name="GameDetailsFragment"
        tools:layout="@layout/fragment__tela_detalhes_do_jogo" />

    <fragment
        android:id="@+id/cadastro"
        android:name="com.example.trab1_ddm.ui.register.RegisterFragment"
        tools:layout="@layout/activity_tela_de_cadastro" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.trab1_ddm.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_library"/>

</navigation>